<resources>
    <string name="app_name">Grocery Items</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="item_name">Name</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="note">Note</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="add_item">Add Item</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="no">No</string>
    <string name="yes">yes</string>
    <string name="Edit_item">Edit Item</string>
    <string name="edit">Edit Item</string>
    <string name="update">Update</string>
</resources>