<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linear_layout">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Enter Item"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/heading"
                android:autofillHints="@string/item_name"
                android:hint="@string/item_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_name"
                android:hint="@string/quantity"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/item_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_quantity"
                android:hint="@string/size"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/item_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_size"
                android:hint="@string/color"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/item_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_color"
                android:hint="@string/note"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_note"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@color/cardview_light_background"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>