<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/areYouSure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:padding="6dp"
        />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_below="@id/areYouSure"
        android:layout_margin="19dp"/>

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_below="@id/areYouSure"
        android:layout_margin="19dp"/>

</RelativeLayout>